fix: comprehensive audit remediation — contradictions, language parity, pipeline hardening, agent cleanup
Addresses 28+ issues from independent 4-angle audit:

CRITICAL FIXES:
- Fix pagination contradiction: add offset pagination to handler + repository
- Fix 422 vs 400: validation errors now return 422, malformed requests 400
- Fix frontend error parsing: unwrap {"error": {...}} envelope correctly
- Create TypeScript error handling archetype (was Go-only)
- Create 6 missing agent templates (database, migration, unit_test,
  integration_test, ui_developer, ui_test) — unblocks agent_factory
- Consolidate error handling with canonical reference + cross-links

LANGUAGE PARITY:
- Create shared-backend-patterns.md (language-agnostic contracts)
- Extend Python 294→895 lines (FastAPI, SQLAlchemy, Django, async, testing)
- Extend Java 73→906 lines (Spring Boot, JPA, Hibernate, JUnit 5)
- Extend Rust 79→912 lines (Axum, SQLx, thiserror, tokio, mockall)
- All languages reference shared patterns as foundation

PIPELINE HARDENING:
- Atomic manifest writes (write to .tmp, validate, mv)
- File-write barriers for agent handoffs (ready signals)
- Cross-phase data contract validation
- Carried-forward 3-phase enforcement rule
- Test retry visibility (flaky test tracking)
- Escalation circuit breaker (depth limits, timeouts)
- Phase re-develop protocol with git tagging
- New /reset-phase command (soft + hard reset)

AGENT CLEANUP:
- Agent frontmatter schema (AGENT_SCHEMA.md)
- Full agent inventory (INVENTORY.md) with 37-row quick reference
- BRD ownership decision tree (brd_agent vs product_manager)
- Code reviewer scope boundaries (CR-I: code-level, CR-II: architecture)
- Severity naming standardization across all reviewers
- Reconciliation agent sequencing (1-4 pipeline)
- New code_quality_verifier agent (validates gate checklist with evidence)

TESTING ARCHETYPES:
- crud-service-test.md (898 lines, Go unit tests)
- crud-handler-test.md (851 lines, Go HTTP handler tests)
- crud-rep